--- a/InventarioPro/Client/Shared/MainLayout.razor
+++ b/InventarioPro/Client/Shared/MainLayout.razor
@@ -20,9 +20,10 @@
         <RadzenPanelMenu Style="background-color: transparent; color:white;">
             <RadzenPanelMenuItem Text="Home" Icon="home" Path="/" />
             <RadzenPanelMenuItem Text="Usuarios" Icon="account_box" Path="/Counter" />
+            <RadzenPanelMenuItem Text="Categoria" Icon="inventory" Path="/ListCategoria" />
             <RadzenPanelMenuItem Text="Productos" Icon="inventory" Path="/ListProductos" />
             <RadzenPanelMenuItem Text="Entrada" Icon="inventory" Path="/ListaEntrada" />
-            <RadzenPanelMenuItem Text="Suplidores" Icon="business" />
+            <RadzenPanelMenuItem Text="Suplidore" Icon="business" />
             <RadzenPanelMenuItem Text="Ventas" Icon="assignment" Path="/ListVentas" />
             <RadzenPanelMenuItem Text="Reportes" Icon="assessment" />
         </RadzenPanelMenu>
