cambiso para arreglar duplicados del emrge

--- a/InventarioPro/Client/Pages/Categoria/ListCategoria.razor
+++ b/InventarioPro/Client/Pages/Categoria/ListCategoria.razor
@@ -8,7 +8,7 @@
 @using Radzen
 @inject HttpClient Http
 @inject Radzen.DialogService DialogService
-<PageTitle>Inventario de Entrada</PageTitle>
+<PageTitle>Lista de Categorias</PageTitle>
 
 <div class="header">
     <h2>Inventario de Entrada</h2>
