--- a/InventarioPro/Client/Pages/Entrada/ListEntrada.razor
+++ b/InventarioPro/Client/Pages/Entrada/ListEntrada.razor
@@ -9,11 +9,11 @@
 @using Radzen
 @inject HttpClient Http
 @inject Radzen.DialogService DialogService
-<PageTitle>Inventario de Entrada</PageTitle>
+<PageTitle>Entrada de Productos</PageTitle>
 
 <div class="header">
-    <h2>Inventario de Entrada</h2>
-    <RadzenButton Text="Agregar Producto"  Click="OpenAddProductDialog"  Style="margin-bottom: 10px;" />
+    <h2>Entrada de Productosa</h2>
+    <RadzenButton Text="Nueva Entrada"  Click="OpenAddProductDialog"  Style="margin-bottom: 10px;" />
 </div>
 <!-- Contenedor para el formulario de búsqueda -->
 <div class="mb-3">
