--- a/InventarioPro/Client/Pages/Dashboard/Dash.razor
+++ b/InventarioPro/Client/Pages/Dashboard/Dash.razor
@@ -13,13 +13,12 @@
 
 <RadzenStack Gap="0.5rem">
 
-
     <RadzenCard class="rz-my-8">
         <RadzenText TextStyle="TextStyle.H5">Resumen del Inventario</RadzenText>
         <RadzenRow JustifyContent="Radzen.JustifyContent.SpaceBetween">
             <RadzenColumn Size="3">
                 <RadzenCard Variant="Radzen.Variant.Outlined"
-                    Style="height: 100%; padding: 10px; background-color: #e0f7fa;">
+                            Style="height: 100%; padding: 10px; background-color: #e0f7fa;">
                     <RadzenStack JustifyContent="Radzen.JustifyContent.SpaceBetween" Style="height: 100%;">
                         <RadzenText TextStyle="TextStyle.H6" Style="color: #00796b;">Total de Productos</RadzenText>
                         <RadzenText TextStyle="TextStyle.H4" Style="color: #004d40;">@totalProducts</RadzenText>
@@ -28,7 +27,7 @@
             </RadzenColumn>
             <RadzenColumn Size="3">
                 <RadzenCard Variant="Radzen.Variant.Outlined"
-                    Style="height: 100%; padding: 10px; background-color: #ffe0b2;">
+                            Style="height: 100%; padding: 10px; background-color: #ffe0b2;">
                     <RadzenStack JustifyContent="Radzen.JustifyContent.SpaceBetween" Style="height: 100%;">
                         <RadzenText TextStyle="TextStyle.H6" Style="color: #e65100;">Productos en Stock</RadzenText>
                         <RadzenText TextStyle="TextStyle.H4" Style="color: #e65100;">@inStock</RadzenText>
@@ -37,7 +36,7 @@
             </RadzenColumn>
             <RadzenColumn Size="3">
                 <RadzenCard Variant="Radzen.Variant.Outlined"
-                    Style="height: 100%; padding: 10px; background-color: #ffccbc;">
+                            Style="height: 100%; padding: 10px; background-color: #ffccbc;">
                     <RadzenStack JustifyContent="Radzen.JustifyContent.SpaceBetween" Style="height: 100%;">
                         <RadzenText TextStyle="TextStyle.H6" Style="color: #c62828;">Productos Agotados</RadzenText>
                         <RadzenText TextStyle="TextStyle.H4" Style="color: #c62828;">@outOfStock</RadzenText>
@@ -46,28 +45,32 @@
             </RadzenColumn>
             <RadzenColumn Size="3">
                 <RadzenCard Variant="Radzen.Variant.Outlined"
-                    Style="height: 100%; padding: 10px; background-color: #c8e6c9;">
+                            Style="height: 100%; padding: 10px; background-color: #c8e6c9;">
                     <RadzenStack JustifyContent="Radzen.JustifyContent.SpaceBetween" Style="height: 100%;">
-                        <RadzenText TextStyle="TextStyle.H6" Style="color: #388e3c;">Valor Total del Inventario
+                        <RadzenText TextStyle="TextStyle.H6" Style="color: #388e3c;">
+                            Valor Total del Inventario
                         </RadzenText>
                         <RadzenText TextStyle="TextStyle.H4" Style="color: #1b5e20;">
-                            @(totalInventoryValue?.ToString("F2") ?? "0.00")</RadzenText>
+                            @(totalInventoryValue?.ToString("F2") ?? "0.00")
+                        </RadzenText>
                     </RadzenStack>
                 </RadzenCard>
             </RadzenColumn>
             <RadzenColumn Size="3">
                 <RadzenCard Variant="Radzen.Variant.Outlined"
-                    Style="height: 100%; padding: 10px; background-color: #fff9c4;">
+                            Style="height: 100%; padding: 10px; background-color: #fff9c4;">
                     <RadzenStack JustifyContent="Radzen.JustifyContent.SpaceBetween" Style="height: 100%;">
                         <RadzenText TextStyle="TextStyle.H6" Style="color: #f57f17;">Promedio de Precio</RadzenText>
-                        <RadzenText TextStyle="TextStyle.H4" Style="color: #f57f17;">@(averagePrice?.ToString("F2") ??
-                            "0.00")</RadzenText>
+                        <RadzenText TextStyle="TextStyle.H4" Style="color: #f57f17;">
+                            @(averagePrice?.ToString("F2") ??
+                                "0.00")
+                        </RadzenText>
                     </RadzenStack>
                 </RadzenCard>
             </RadzenColumn>
             <RadzenColumn Size="3">
                 <RadzenCard Variant="Radzen.Variant.Outlined"
-                    Style="height: 100%; padding: 10px; background-color: #ffe0b2;">
+                            Style="height: 100%; padding: 10px; background-color: #ffe0b2;">
                     <RadzenStack JustifyContent="Radzen.JustifyContent.SpaceBetween" Style="height: 100%;">
                         <RadzenText TextStyle="TextStyle.H6" Style="color: #e65100;">Número de Categorías</RadzenText>
                         <RadzenText TextStyle="TextStyle.H4" Style="color: #e65100;">@totalCategories</RadzenText>
@@ -76,7 +79,7 @@
             </RadzenColumn>
             <RadzenColumn Size="3">
                 <RadzenCard Variant="Radzen.Variant.Outlined"
-                    Style="height: 100%; padding: 10px; background-color: #e0e0e0;">
+                            Style="height: 100%; padding: 10px; background-color: #e0e0e0;">
                     <RadzenStack JustifyContent="Radzen.JustifyContent.SpaceBetween" Style="height: 100%;">
                         <RadzenText TextStyle="TextStyle.H6" Style="color: #757575;">Número de Proveedores</RadzenText>
                         <RadzenText TextStyle="TextStyle.H4" Style="color: #757575;">2</RadzenText>
@@ -86,9 +89,10 @@
             </RadzenColumn>
             <RadzenColumn Size="3">
                 <RadzenCard Variant="Radzen.Variant.Outlined"
-                    Style="height: 100%; padding: 10px; background-color: #e0f7fa;">
+                            Style="height: 100%; padding: 10px; background-color: #e0f7fa;">
                     <RadzenStack JustifyContent="Radzen.JustifyContent.SpaceBetween" Style="height: 100%;">
-                        <RadzenText TextStyle="TextStyle.H6" Style="color: #00796b;">Último Producto Agregado
+                        <RadzenText TextStyle="TextStyle.H6" Style="color: #00796b;">
+                            Último Producto Agregado
                         </RadzenText>
                         <RadzenText TextStyle="TextStyle.H4" Style="color: #004d40;">@ultimoProductoNombre</RadzenText>
                         <!-- Nueva tarjeta -->
@@ -98,37 +102,33 @@
         </RadzenRow>
     </RadzenCard>
     <RadzenCard class="rz-my-8"
-        Style="background-color: #f9f9f9; border: 1px solid #ddd; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);">
+                Style="background-color: #f9f9f9; border: 1px solid #ddd; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);">
         <RadzenText TextStyle="TextStyle.H5">Resumen de Ventas</RadzenText>
         <RadzenRow JustifyContent="Radzen.JustifyContent.SpaceBetween" Style="margin-top: 20px;">
             <RadzenColumn Size="4">
                 <RadzenCard Variant="Radzen.Variant.Filled"
-                    Style="padding: 20px; background-color: #a8d8ea; color: #2c3e50; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                            Style="padding: 20px; background-color: #a8d8ea; color: #2c3e50; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                     <RadzenStack JustifyContent="Radzen.JustifyContent.SpaceBetween">
                         <RadzenText TextStyle="TextStyle.H6" Style="font-weight: bold;">Total de Ventas</RadzenText>
-                        <RadzenText TextStyle="TextStyle.H4" Style="font-weight: bold;">@(totalVentas?.ToString("F2") ??
-                            "0.00")</RadzenText>
+                        <RadzenText TextStyle="TextStyle.H4" Style="font-weight: bold;">@(totalVentas?.ToString("F2") ?? "0.00")</RadzenText>
                     </RadzenStack>
                 </RadzenCard>
             </RadzenColumn>
             <RadzenColumn Size="4">
                 <RadzenCard Variant="Radzen.Variant.Filled"
-                    Style="padding: 20px; background-color: #ffe0b2; color: #5d4037; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                            Style="padding: 20px; background-color: #ffe0b2; color: #5d4037; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                     <RadzenStack JustifyContent="Radzen.JustifyContent.SpaceBetween">
-                        <RadzenText TextStyle="TextStyle.H6" Style="font-weight: bold;">Número de Transacciones
-                        </RadzenText>
-                        <RadzenText TextStyle="TextStyle.H4" Style="font-weight: bold;">@numeroTransacciones
-                        </RadzenText>
+                        <RadzenText TextStyle="TextStyle.H6" Style="font-weight: bold;">Número de Transacciones</RadzenText>
+                        <RadzenText TextStyle="TextStyle.H4" Style="font-weight: bold;">@numeroTransacciones</RadzenText>
                     </RadzenStack>
                 </RadzenCard>
             </RadzenColumn>
             <RadzenColumn Size="4">
                 <RadzenCard Variant="Radzen.Variant.Filled"
-                    Style="padding: 20px; background-color: #d1c4e9; color: #4a148c; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                            Style="padding: 20px; background-color: #d1c4e9; color: #4a148c; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                     <RadzenStack JustifyContent="Radzen.JustifyContent.SpaceBetween">
                         <RadzenText TextStyle="TextStyle.H6" Style="font-weight: bold;">Promedio por Venta</RadzenText>
-                        <RadzenText TextStyle="TextStyle.H4" Style="font-weight: bold;">@(promedioVenta?.ToString("F2")
-                            ?? "0.00")</RadzenText>
+                        <RadzenText TextStyle="TextStyle.H4" Style="font-weight: bold;">@(promedioVenta?.ToString("F2") ?? "0.00")</RadzenText>
                     </RadzenStack>
                 </RadzenCard>
             </RadzenColumn>
@@ -137,7 +137,7 @@
         <RadzenRow JustifyContent="Radzen.JustifyContent.SpaceBetween" Style="margin-top: 20px;">
             <RadzenColumn Size="4">
                 <RadzenCard Variant="Radzen.Variant.Filled"
-                    Style="padding: 20px; background-color: #ef9a9a; color: #b71c1c; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                            Style="padding: 20px; background-color: #ef9a9a; color: #b71c1c; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                     <RadzenStack JustifyContent="Radzen.JustifyContent.SpaceBetween">
                         <RadzenText TextStyle="TextStyle.H6" Style="font-weight: bold;">Ventas Canceladas</RadzenText>
                         <RadzenText TextStyle="TextStyle.H4" Style="font-weight: bold;">@ventasCanceladas</RadzenText>
@@ -146,7 +146,7 @@
             </RadzenColumn>
             <RadzenColumn Size="4">
                 <RadzenCard Variant="Radzen.Variant.Filled"
-                    Style="padding: 20px; background-color: #e1bee7; color: #6a1b9a; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                            Style="padding: 20px; background-color: #e1bee7; color: #6a1b9a; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                     <RadzenStack JustifyContent="Radzen.JustifyContent.SpaceBetween">
                         <RadzenText TextStyle="TextStyle.H6" Style="font-weight: bold;">Devoluciones</RadzenText>
                         <RadzenText TextStyle="TextStyle.H4" Style="font-weight: bold;">@devoluciones</RadzenText>
@@ -155,11 +155,10 @@
             </RadzenColumn>
             <RadzenColumn Size="4">
                 <RadzenCard Variant="Radzen.Variant.Filled"
-                    Style="padding: 20px; background-color: #cfd8dc; color: #37474f; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                            Style="padding: 20px; background-color: #cfd8dc; color: #37474f; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                     <RadzenStack JustifyContent="Radzen.JustifyContent.SpaceBetween">
                         <RadzenText TextStyle="TextStyle.H6" Style="font-weight: bold;">Última Venta</RadzenText>
-                        <RadzenText TextStyle="TextStyle.H4" Style="font-weight: bold;">@(ultimaVenta?.ToString("F2") ??
-                            "0.00")</RadzenText>
+                        <RadzenText TextStyle="TextStyle.H4" Style="font-weight: bold;">@(ultimaVenta?.ToString("F2") ?? "0.00")</RadzenText>
                     </RadzenStack>
                 </RadzenCard>
             </RadzenColumn>
@@ -183,23 +182,12 @@
         }
         else
         {
-            <RadzenText TextStyle="TextStyle.H6" Style="color: red;">No hay datos disponibles para mostrar el gráfico.
+            <RadzenText TextStyle="TextStyle.H6" Style="color: red;">
+                No hay datos disponibles para mostrar el gráfico.
             </RadzenText>
         }
 
     </RadzenCard>
-    <RadzenDataGrid Data="@inventoryItems" AllowSorting="true" AllowFiltering="true" Style="height: 350px;">
-        <Columns>
-            <RadzenDataGridColumn Property="Nombre" Title="Nombre" />
-            <RadzenDataGridColumn Title="Categoría">
-                <Template>
-                    @categoryNames.GetValueOrDefault(((Producto_DTO)@context).CategoriaId, "Desconocido")
-                </Template>
-            </RadzenDataGridColumn>
-            <RadzenDataGridColumn Property="Existencia" Title="Cantidad" />
-            <RadzenDataGridColumn Property="Precio" Title="Precio" />
-        </Columns>
-    </RadzenDataGrid>
     <RadzenDataGrid Data="@inventoryItems" AllowSorting="true" AllowFiltering="true" Style="height: 350px;">
         <Columns>
             <RadzenDataGridColumn Property="Nombre" Title="Nombre" />
@@ -268,18 +256,17 @@
             }
 
             // Obtener productos por categoría
-            var productosPorCategoriaResponse = await
-            Http.GetFromJsonAsync<IEnumerable<CuentaCategoriaDTO>>("api/producto/GetProductosPorCategoria");
+            var productosPorCategoriaResponse = await Http.GetFromJsonAsync<IEnumerable<CuentaCategoriaDTO>>("api/producto/GetProductosPorCategoria");
             if (productosPorCategoriaResponse != null)
             {
                 productsByCategory = productosPorCategoriaResponse
-                .Select(g => new CuentaCategoriaDTO
-                    {
-                        CategoryName = categoryNames.TryGetValue(g.Category, out var name) ? name : "Desconocido",
-                        Count = g.Count
-                    })
-                .Where(x => x.Count > 0)
-                .ToList();
+                    .Select(g => new CuentaCategoriaDTO
+                        {
+                            CategoryName = categoryNames.TryGetValue(g.Category, out var name) ? name : "Desconocido",
+                            Count = g.Count
+                        })
+                    .Where(x => x.Count > 0)
+                    .ToList();
             }
 
             // Obtener productos del inventario
